Storing Dataset in MongoDB

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -129,6 +129,79 @@
     "# You can apply similar cleaning to books_df if needed\n",
     "# books_df = books_df.dropna()  # example"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa326a4e",
+   "metadata": {},
+   "source": [
+    "## 🗃 Storing Dataset in MongoDB\n",
+    "We connect to MongoDB and insert our dataset using an optimized schema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4cc2d55",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Step 6: Connect to MongoDB\n",
+    "client = MongoClient(\"mongodb://localhost:27017/\")  # Change if hosted elsewhere\n",
+    "db = client[\"books_database\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3e86966",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Step 7: Convert DataFrames to list of dictionaries\n",
+    "books_data = books_df.to_dict(\"records\")\n",
+    "ratings_data = ratings_df.to_dict(\"records\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d652ef84",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pymongo.errors import BulkWriteError\n",
+    "\n",
+    "def insert_in_batches(collection, data, batch_size=100):\n",
+    "    for i in range(0, len(data), batch_size):\n",
+    "        batch = data[i:i+batch_size]\n",
+    "        try:\n",
+    "            collection.insert_many(batch)\n",
+    "        except BulkWriteError as bwe:\n",
+    "            print(f\"❌ Bulk write error: {bwe.details}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Error inserting batch {i // batch_size}: {e}\")\n",
+    "\n",
+    "db[\"books\"].drop()\n",
+    "db[\"ratings\"].drop()\n",
+    "\n",
+    "db[\"books\"].insert_many(books_data)\n",
+    "insert_in_batches(db[\"ratings\"], ratings_data)\n",
+    "\n",
+    "print(\"✅ Data inserted into MongoDB successfully.\")"
+   ]
   }
  ],
  "metadata": {
