Data Processing with PySpark

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -202,6 +202,66 @@
     "\n",
     "print(\"✅ Data inserted into MongoDB successfully.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1a344e6",
+   "metadata": {},
+   "source": [
+    "## ⚙ Data Processing with PySpark\n",
+    "We use PySpark to read, transform, and analyze the dataset loaded from MongoDB."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "759e1e2e",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "# Step 1: Create a Spark session\n",
+    "spark = SparkSession.builder \\\n",
+    "    .appName(\"BooksMiniProject\") \\\n",
+    "    .getOrCreate()\n",
+    "\n",
+    "# Step 2: Load your CSV files into Spark DataFrames\n",
+    "books_df = spark.read.csv(\"books_data.csv\", header=True, inferSchema=True)\n",
+    "ratings_df = spark.read.csv(\"Books_rating.csv\", header=True, inferSchema=True)\n",
+    "\n",
+    "# Optional: Show first few rows for confirmation\n",
+    "books_df.show(5)\n",
+    "ratings_df.show(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c6de1d6",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Read documents from MongoDB, exclude '_id'\n",
+    "books_docs = list(db[\"books\"].find({}, {\"_id\": 0}))\n",
+    "ratings_docs = list(db[\"ratings\"].find({}, {\"_id\": 0}).limit(10000))  # 🔁 Adjust limit as needed\n",
+    "\n",
+    "# Convert to Spark DataFrames\n",
+    "df_books = spark.createDataFrame(books_docs)\n",
+    "df_ratings = spark.createDataFrame(ratings_docs)\n",
+    "\n",
+    "# Show sample rows\n",
+    "df_books.show(3)\n",
+    "df_ratings.show(3)"
+   ]
   }
  ],
  "metadata": {
