Querying with Spark SQL code
Querying with Spark SQL code added

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -262,6 +262,137 @@
     "df_books.show(3)\n",
     "df_ratings.show(3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4a5adc6",
+   "metadata": {},
+   "source": [
+    "## 🔍 Querying with Spark SQL\n",
+    "Analyze average ratings using Spark SQL and display top-rated books."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "560de860",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import avg\n",
+    "\n",
+    "# Optional: rename to avoid column name conflict during join\n",
+    "df_ratings = df_ratings.withColumnRenamed(\"review/score\", \"rating_score\")\n",
+    "\n",
+    "# Perform inner join on Title\n",
+    "df_joined = df_ratings.join(df_books, on=\"Title\", how=\"inner\")\n",
+    "\n",
+    "# Select relevant columns\n",
+    "df_selected = df_joined.select(\n",
+    "    \"Title\",\n",
+    "    \"authors\",\n",
+    "    \"categories\",\n",
+    "    \"rating_score\"\n",
+    ")\n",
+    "\n",
+    "# Compute average rating per book\n",
+    "df_avg = df_selected.groupBy(\"Title\", \"authors\", \"categories\") \\\n",
+    "    .agg(avg(\"rating_score\").alias(\"avg_rating\")) \\\n",
+    "    .orderBy(\"avg_rating\", ascending=False)\n",
+    "\n",
+    "# Show top 10 rated books\n",
+    "df_avg.show(10, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12250aab",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Get top 10 books from df_avg\n",
+    "top_books = df_avg.limit(10).toPandas().to_dict(\"records\")\n",
+    "\n",
+    "# Save to MongoDB\n",
+    "db[\"top_books\"].drop()  # Drop existing collection if it exists\n",
+    "db[\"top_books\"].insert_many(top_books)  # Insert top books\n",
+    "\n",
+    "print(\"✅ Top 10 books saved to MongoDB collection 'top_books'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "965504ef",
+   "metadata": {},
+   "source": [
+    "## 📊 Genre-Based Filtering\n",
+    "We filter and analyze specific genres like Comics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4236f6b5",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Filter books where categories contain \"Comics\"\n",
+    "df_comics = df_avg.filter(df_avg.categories.contains(\"Comics\"))\n",
+    "df_comics.show(truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a9d4841",
+   "metadata": {},
+   "source": [
+    "### Indexing for Performance\n",
+    "\n",
+    "Create indexes on frequently used fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fdddf47",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "db[\"books\"].create_index(\"Title\")\n",
+    "db[\"books\"].create_index(\"publishedDate\")\n",
+    "db[\"books\"].create_index(\"categories\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be3f64bd",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "list(db[\"books\"].list_indexes())"
+   ]
   }
  ],
  "metadata": {
