Visualization of Top-Rated Books

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -393,6 +393,46 @@
    "source": [
     "list(db[\"books\"].list_indexes())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d06fe030",
+   "metadata": {},
+   "source": [
+    "## 📈 Visualization of Top-Rated Books\n",
+    "Using Matplotlib to show top-rated books."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1819a255",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Convert to Pandas DataFrame from Spark DataFrame\n",
+    "top_books_df = df_avg.limit(10).toPandas()\n",
+    "\n",
+    "# Check if the DataFrame is not empty and contains required columns\n",
+    "if not top_books_df.empty and 'Title' in top_books_df.columns and 'avg_rating' in top_books_df.columns:\n",
+    "    # Plot horizontal bar chart\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.barh(top_books_df['Title'], top_books_df['avg_rating'], color='skyblue')\n",
+    "    plt.xlabel(\"Average Rating\")\n",
+    "    plt.title(\"Top 10 Rated Books\")\n",
+    "    plt.gca().invert_yaxis()  # Puts highest-rated book at the top\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "else:\n",
+    "    print(\"⚠ DataFrame is empty or missing required columns.\")"
+   ]
   }
  ],
  "metadata": {
