Year based analysis updated

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -433,6 +433,44 @@
     "else:\n",
     "    print(\"⚠ DataFrame is empty or missing required columns.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "961f7e9d",
+   "metadata": {},
+   "source": [
+    "## 📆 Year-Based Analysis\n",
+    "Analyzing books by year of publication."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0810082e",
+   "metadata": {},
+   "source": [
+    "Filter by Year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0270afb3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Join df_avg with df_books to access publishedDate\n",
+    "df_avg_with_date = df_avg.join(df_books.select('Title', 'publishedDate'), on='Title', how='inner')\n",
+    "\n",
+    "# Filter books published after 2010\n",
+    "df_recent_books = df_avg_with_date.filter(df_avg_with_date.publishedDate >= '2010')\n",
+    "\n",
+    "# Show result\n",
+    "df_recent_books.show(truncate=False)"
+   ]
   }
  ],
  "metadata": {
