Data visualization graph and chart added.

--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -471,6 +471,178 @@
     "# Show result\n",
     "df_recent_books.show(truncate=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25713116",
+   "metadata": {},
+   "source": [
+    "# Genre Distribution (Pie Chart)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fb57be3",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Get the count of books by genre\n",
+    "genre_counts = df_avg.select(\"categories\").rdd.flatMap(lambda x: x).countByValue()\n",
+    "\n",
+    "# Sort by count and take top N\n",
+    "top_n = 10\n",
+    "sorted_genre_counts = sorted(genre_counts.items(), key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "# Separate top N genres and the \"Others\"\n",
+    "top_genres = sorted_genre_counts[:top_n]\n",
+    "other_genres = sorted_genre_counts[top_n:]\n",
+    "\n",
+    "# Combine remaining genres into \"Other\"\n",
+    "if other_genres:\n",
+    "    top_genres.append((\"Other\", sum([count for _, count in other_genres])))\n",
+    "\n",
+    "# Prepare data for plotting\n",
+    "genre_labels = [str(k) for k, _ in top_genres]\n",
+    "genre_sizes = [v for _, v in top_genres]\n",
+    "\n",
+    "# Plot pie chart\n",
+    "plt.figure(figsize=(8, 8))\n",
+    "plt.pie(genre_sizes, labels=genre_labels, autopct='%1.1f%%', startangle=140, colors=plt.cm.Paired.colors)\n",
+    "plt.title(\"Top Genres in Books (Others Combined)\")\n",
+    "plt.axis('equal')  # Equal aspect ratio ensures that pie is drawn as a circle.\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce39e685",
+   "metadata": {},
+   "source": [
+    "#  Books Published by Year (Bar Plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32630c77",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Convert Spark DataFrame to Pandas (limit to avoid memory overload)\n",
+    "year_counts_df = df_books.select(\"publishedDate\").limit(100000).toPandas()\n",
+    "\n",
+    "# Extract the year from the publishedDate\n",
+    "year_counts_df['Year'] = pd.to_datetime(year_counts_df['publishedDate'], errors='coerce').dt.year\n",
+    "\n",
+    "# Drop rows with NaN Year values\n",
+    "year_counts_df = year_counts_df.dropna(subset=['Year'])\n",
+    "\n",
+    "# Create a new column for decade categorization\n",
+    "year_counts_df['Decade'] = (year_counts_df['Year'] // 10) * 10\n",
+    "\n",
+    "# Group by Decade and count the number of books\n",
+    "decade_counts = year_counts_df.groupby('Decade').size().reset_index(name='Book Count')\n",
+    "\n",
+    "# Sort the decades for the plot\n",
+    "decade_counts = decade_counts.sort_values(by='Decade')\n",
+    "\n",
+    "# Plot the bar chart\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.bar(decade_counts['Decade'].astype(str), decade_counts['Book Count'], color='skyblue')\n",
+    "\n",
+    "# Add labels and title\n",
+    "plt.xlabel(\"Decade\")\n",
+    "plt.ylabel(\"Number of Books Published\")\n",
+    "plt.title(\"Books Published by Decade\")\n",
+    "plt.xticks(rotation=45)  # Rotate labels for better readability\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66de5d2",
+   "metadata": {},
+   "source": [
+    "# Average Rating by Genre (Box Plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cb97452",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Convert the Spark DataFrame to Pandas for Seaborn plotting\n",
+    "df_genre_ratings = df_avg.select(\"categories\", \"avg_rating\").toPandas()\n",
+    "\n",
+    "# Group genres by frequency and get top 10\n",
+    "top_genres = df_genre_ratings['categories'].value_counts().nlargest(10).index\n",
+    "\n",
+    "# Filter the dataframe to include only the top genres\n",
+    "df_top_genres = df_genre_ratings[df_genre_ratings['categories'].isin(top_genres)]\n",
+    "\n",
+    "# Plot horizontal box plot with top genres\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.boxplot(x=\"avg_rating\", y=\"categories\", data=df_top_genres, palette=\"Set2\")\n",
+    "plt.title(\"Rating Distribution by Top 10 Genres\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffee0e97",
+   "metadata": {},
+   "source": [
+    "#  Rating Distribution (Histogram)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "242e90b5",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Convert ratings to Pandas for plotting\n",
+    "ratings = df_avg.select(\"avg_rating\").toPandas()\n",
+    "\n",
+    "# Plot histogram\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.hist(ratings['avg_rating'], bins=20, color='lightblue', edgecolor='black')\n",
+    "plt.xlabel(\"Average Rating\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Distribution of Average Ratings\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
