--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -643,6 +643,144 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "32db8501",
+   "metadata": {},
+   "source": [
+    "# Average Rating by Year (Line Plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4faae3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converte 'publishedDate' field and to Pandas\n",
+    "df_books_with_year = df_avg_with_date.select(\"Title\", \"avg_rating\", \"publishedDate\").toPandas()\n",
+    "\n",
+    "# Extract year from the 'publishedDate'\n",
+    "df_books_with_year['Year'] = pd.to_datetime(df_books_with_year['publishedDate'], errors='coerce').dt.year\n",
+    "\n",
+    "# Group by year and calculate average rating\n",
+    "avg_ratings_by_year = df_books_with_year.groupby('Year')['avg_rating'].mean().reset_index()\n",
+    "\n",
+    "# Plot line plot\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.lineplot(x='Year', y='avg_rating', data=avg_ratings_by_year, marker='o', color='green')\n",
+    "plt.title(\"Average Rating by Year\")\n",
+    "plt.xlabel(\"Year\")\n",
+    "plt.ylabel(\"Average Rating\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1430406a",
+   "metadata": {},
+   "source": [
+    "# Rating Distribution by Top 10 Author (Box Plot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33b83478",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate average rating per author\n",
+    "df_author_avg_rating = df_avg.groupBy(\"authors\").agg({\"avg_rating\": \"avg\"}).withColumnRenamed(\"avg(avg_rating)\", \"avg_author_rating\")\n",
+    "\n",
+    "# Convert the Spark DataFrame to Pandas for Seaborn plotting\n",
+    "df_author_ratings = df_author_avg_rating.toPandas()\n",
+    "\n",
+    "# Sort authors by average rating\n",
+    "df_author_ratings = df_author_ratings.sort_values(by=\"avg_author_rating\", ascending=False)\n",
+    "\n",
+    "# Limit to top 10 authors based on average rating\n",
+    "top_authors = df_author_ratings.head(10)\n",
+    "\n",
+    "# Plot box plot for ratings by author\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "sns.boxplot(x=\"authors\", y=\"avg_author_rating\", data=top_authors)\n",
+    "plt.xticks(rotation=45, ha='right')  # Rotate labels and align them\n",
+    "plt.title(\"Rating Distribution by Top 10 Authors\", fontsize=14)\n",
+    "plt.xlabel(\"Authors\", fontsize=12)\n",
+    "plt.ylabel(\"Average Rating\", fontsize=12)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a77422",
+   "metadata": {},
+   "source": [
+    "# 📊 Performance Evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d4b4901",
+   "metadata": {},
+   "source": [
+    "### 1. Spark SQL Execution Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abd45b9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "\n",
+    "# Example: Compute average rating per genre\n",
+    "df_avg = df_joined.groupBy(\"categories\").agg(avg(\"rating_score\").alias(\"avg_rating\"))\n",
+    "df_avg.show()\n",
+    "\n",
+    "end = time.time()\n",
+    "print(f\"⏱ Spark query time: {end - start:.4f} seconds\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5134ff57",
+   "metadata": {},
+   "source": [
+    "### 2. MongoDB Aggregation Execution Time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04030e2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = time.time()\n",
+    "\n",
+    "pipeline = [\n",
+    "    { \"$group\": {\n",
+    "        \"_id\": \"$categories\",\n",
+    "        \"avg_rating\": { \"$avg\": \"$review/score\" }\n",
+    "    }},\n",
+    "    { \"$sort\": { \"avg_rating\": -1 } }\n",
+    "]\n",
+    "\n",
+    "results = list(db[\"ratings\"].aggregate(pipeline))\n",
+    "\n",
+    "end = time.time()\n",
+    "print(f\"⏱ MongoDB aggregation time: {end - start:.4f} seconds\")\n"
+   ]
   }
  ],
  "metadata": {
